force-app/main/default/objects/Mentor__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <label>Full Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>