force-app/main/default/objects/Mentor__c/fields/M_Email__c.field-meta.xml
<CustomField>
    <fullName>M_Email__c</fullName>
    <label>M_Email</label>
    <type>Email</type>
</CustomField>