force-app/main/default/objects/Mentor__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Force</fullName>
            </value>
            <value>
                <fullName>Service Now</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Full SAtck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>